# egui_note

./: Cargo.toml
src/: main.rs
src/games/: game_list.json  input_default.json  input_ggst.json  input_skg.json  logic_default.rs  logic_skg.rs  mod.rs
