[package]
name = "egui_note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24.6", features = ["jpeg", "png", "gif"] }
serde = "1.0.159"
serde_json = "1.0.95"
indexmap = {version = "1.9.1", features = ["serde"]}
tracing-subscriber = "0.3.16"
regex = "1.7.3"
